# DECEIT-the-ai-truth-environment-

./: .env.example  .gitignore  Dockerfile  README.md  REWARD_DESIGN.md  __init__.py  client.py  hf_space_deploy.md  models.py  openenv.yaml  pyproject.toml  smoke_test.py
docs/superpowers/plans/: 2026-04-25-phase4-level2-distractors.md  2026-04-25-phase5-level3-adversarial.md
docs/superpowers/specs/: 2026-04-24-deceit-phase1-design.md
scripts/: append_phase4_notebook.py  append_phase5_notebook.py  generate_distractors.py  generate_level1_dataset.py  generate_pressure.py
src/deceit_env/: __init__.py  models.py
src/deceit_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deceit_env/data/: level1.jsonl  level2.jsonl  level3.jsonl
src/deceit_env/server/: app.py  environment.py  grader.py
tests/: test_environment.py  test_grader.py  test_level2.py  test_level3.py  test_models.py  test_rewards.py
training/: sanity_run.ipynb
